manifests/cluster-addons/homepage/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
  namespace: homepage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: '9093'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app: grafana
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: lidarr
      toPorts:
        - ports:
            - port: '8686'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: '7878'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: '9696'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: '5055'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: audiobookshelf
      toPorts:
        - ports:
            - port: '80'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
            app: longhorn-ui
      toPorts:
        - ports:
            - port: '8000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            app.kubernetes.io/instance: immich
            app.kubernetes.io/name: server
      toPorts:
        - ports:
            - port: '2283'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: amex
            app: amex-frontend
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

    - toFQDNs:
        - matchName: 'api.github.com'
        - matchName: 'bakseter.net'
        - matchName: 'mandagsmiddag.no'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
